# hermesx-tauri

./: .commitlintrc.json  .gitignore  .gitignore.note  .prettierrc.json  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/hermesx-core/: Cargo.toml
crates/hermesx-core/src/: config.rs  credentials.rs  lib.rs  notification.rs  state_machine.rs  work_monitor.rs
docs/: architecture.md  feature-parity.md  tech-stack.md  user-stories.md  zeusX-selectors.md
scripts/: bump-versions.js
src/: App.svelte  Settings.svelte
src-sidecar/: package-lock.json  package.json  tsconfig.json
src-sidecar/src/: index.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  main.rs  monitor.rs  persistence.rs  state_machine.rs  work_monitor.rs
src-tauri/src/screen_lock/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/zeusX/: mod.rs  selectors.rs
src-tauri/src/zeus_x/: mod.rs
src/lib/: tauri.ts
