[package]
name = "hermesx-tauri"
version = "1.7.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
hermesx-core = { path = "../crates/hermesx-core" }
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_RemoteDesktop",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]}

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSDistributedNotificationCenter", "NSString", "NSNotification"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
