[package]
name = "hermesx-tauri"
version = "1.9.15"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libloading = "0.8"
keyring = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
hermesx-core = { path = "../crates/hermesx-core" }
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_RemoteDesktop",
    "Win32_Foundation",
]}

# macOS: libloading (cross-platform dep above) handles CGSession polling

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures = "0.3"
